@@ -5,7 +5,9 @@ Changelog
 1.3.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Remove subsite support from pathbar viewlet since we removed the
+  subsite dependency from this package.
+  [raphael-s]
 
 
 1.3.1 (2016-11-09)
